--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SafwaneG.github.io/dimmak_test",
+  "homepage": "https://safouaneguilmi.github.io/dimaak_test",
   "name": "dimaak",
   "version": "0.1.0",
   "private": true,
